basic kariba properties added

--- a/src/conf/startup.properties
+++ b/src/conf/startup.properties
@@ -41,7 +41,8 @@
                         org.apache.falcon.rerun.service.RetryService,\
                         org.apache.falcon.rerun.service.LateRunService,\
                         org.apache.falcon.metadata.MetadataMappingService,\
-                        org.apache.falcon.service.LogCleanupService
+                        org.apache.falcon.service.LogCleanupService,\
+                        org.knowledgent.kariba.dl.datamgmt.services.util.server.DataManagementServerMain
 
 ##### Prism Services #####
 prism.application.services=org.apache.falcon.entity.store.ConfigurationStore
@@ -109,6 +110,7 @@ prism.configstore.listeners=org.apache.falcon.entity.v0.EntityGraph,\
 *.falcon.graph.preserve.history=false
 *.falcon.graph.transaction.retry.count=3
 *.falcon.graph.transaction.retry.delay=5
+*.kariba.datamgmt.server.config=/usr/lib/wellcare/dl/conf/data-mgmt-server-config.properties
 
 # Uncomment and override the following properties for enabling metrics for titan db and pushing them to graphite. You
 # can use other reporters like ganglia also.
@@ -192,3 +194,6 @@ prism.configstore.listeners=org.apache.falcon.entity.v0.EntityGraph,\
 *.falcon.security.authorization.provider=org.apache.falcon.security.DefaultAuthorizationProvider
 
 ######### Authorization Properties #########
+
+######### Security ##########
+*.falcon.enableTLS=false
