--- a/pom.xml
+++ b/pom.xml
@@ -1017,6 +1017,12 @@
                 <artifactId>titan-berkeleyje-jre6</artifactId>
                 <version>0.4.2</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpcore</artifactId>
+                <version>4.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
